--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_bulk_import.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_bulk_import.html
@@ -23,56 +23,113 @@
 
         </div>
         {% if form %}
-        <form method="post" action="{% url 'gebruiker_bulk_import' %}" novalidate>
+        <form method="post" action="{% url 'gebruiker_bulk_import' %}" enctype="multipart/form-data" novalidate>
             {% csrf_token %}
             <fieldset>
-                {% if form.cleaned_data.emailadressen %}
-                    <div>
-                        <h2 class="h3">Validatie resultaat</h2>
-                    </div>
-                    <table class="overview--validate haai">
-                        <thead>
-                            <tr>
-                                <th>E-mailadres</th>
-                                <th>Wordt geïmporteerd</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for emailadres in form.cleaned_data.emailadressen.validate_resultaat %}
-                            <tr>
-                                <td>{{ emailadres.emailadres }}</td>
-                                <td>{% if emailadres.is_emailadres and emailadres.bestaat_niet %}{% include "icons/checkmark.svg" %}{% else %}{% include "icons/close.svg" %}{% endif %}</td>
-                                <td>
-                                    <ul class="list-clean">
-                                        {% if not emailadres.is_emailadres %}<li><mark>{{ emailadres.emailadres }}</mark> is geen e-mailadres</li>{% endif %}
-                                        {% if not emailadres.bestaat_niet %}<li>Een gebruiker met dit e-mailadres bestaat reeds</li>{% endif %}
-                                    </ul>
-                                </td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                    {% if form.cleaned_data.emailadressen.valide_emailadressen %}
-                    <p>{{ form.cleaned_data.emailadressen.valide_emailadressen|length }} van de {{ form.cleaned_data.emailadressen.validate_resultaat|length }} gebruikers, kunnen worden aangemaakt.</p>
-                    <div class="form-row container__button">
-                        <div class="form-row btn-row">
-                            <button type="submit" name="aanmaken" value="ja" class="btn btn-action">
-                                <span style="white-space: nowrap;">Gebruikers aanmaken</span>
-                            </button>
-                        </div>
-                    </div>
-                    {% else %}
-                    <p>Er kunnen geen gebruikers worden aangemaakt met deze e-mailadressen</p>
-                    {% endif %}
-                {% endif %}
-                <div class="form-control__with-helptext padding--bottom">
-                    {{ form.emailadressen|render_rotterdam_formulier }}
+                {% if not form.errors and form.cleaned_data.csv_file.all_rows %}
+                <div>
+                    <h2 class="h3">Validatie resultaat</h2>
                 </div>
-                <div class="form-control__with-helptext padding--bottom">
+                {% if not form.errors and form.cleaned_data.csv_file.valid_rows %}
+                <p>{{ form.cleaned_data.csv_file.valid_rows|length }} van de {{ form.cleaned_data.csv_file.all_rows|length }} gebruiker{% if form.cleaned_data.csv_file.all_rows|length > 1 %}s{% endif %}, {% if form.cleaned_data.csv_file.valid_rows|length > 1 %}kunnen{% else  %}kan{% endif %} worden aangemaakt.</p>
+
+                <p>Onderstaande gebruikers kunnen worden geïmporteerd:</p>
+                <table>
+                    <thead>
+                        <th>email</th>
+                        <th>voornaam</th>
+                        <th>achternaam</th>
+                        <th>telefoonnummer</th>
+                        <th>Wordt geïmporteerd</th>
+                    </thead>
+                    <tbody>
+                        {% for row in form.cleaned_data.csv_file.valid_rows %}
+                        <tr>
+                            {% for cell in row %}
+                            <td>
+                                {% if forloop.last %}
+                                    {% if cell %}
+                                        {% include "icons/close.svg" %}
+                                        {{ cell }}
+                                    {% else %}
+                                        {% include "icons/checkmark.svg" %}
+                                    {% endif %}
+                                {% else %}
+                                    {% if cell %}
+                                        {{cell}}
+                                    {% else %}
+                                        -
+                                    {% endif %}
+                                {% endif %}
+                            </td>
+                            {% endfor %}
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                <div class="form-row container__button">
+                    <div class="form-row btn-row">
+                        <button type="submit" name="aanmaken" value="ja" class="btn btn-action">
+                            <span style="white-space: nowrap;">
+                                {% if form.cleaned_data.csv_file.valid_rows|length != form.cleaned_data.csv_file.all_rows|length %}
+                                    Alleen deze gebruiker{% if form.cleaned_data.csv_file.valid_rows|length > 1 %}s{% endif %} aanmaken
+                                {% else %}
+                                    Gebruiker{% if form.cleaned_data.csv_file.valid_rows|length > 1 %}s{% endif %} aanmaken
+                                {% endif %}
+                            </span>
+                        </button>
+                    </div>
+                </div>
+                {% elif not form.errors %}
+                <p>Er kunnen geen gebruikers worden aangemaakt met deze csv data</p>
+                {% endif %}
+                {% if not form.errors and form.cleaned_data.csv_file.valid_rows|length != form.cleaned_data.csv_file.all_rows|length %}
+                <p>Onderstaande gebruikers kunnen <strong>niet</strong> worden geïmporteerd:</p>
+                <table>
+                    <thead>
+                        <th>email</th>
+                        <th>voornaam</th>
+                        <th>achternaam</th>
+                        <th>telefoonnummer</th>
+                        <th>Wordt geïmporteerd</th>
+                    </thead>
+                    <tbody>
+                        {% for row in form.cleaned_data.csv_file.all_rows %}
+                        {% if row.4 %}
+                        <tr>
+                            {% for cell in row %}
+                            <td>
+                                {% if forloop.last %}
+                                    {% if cell %}
+                                        {% include "icons/close.svg" %}
+                                        {{ cell }}
+                                    {% else %}
+                                        {% include "icons/checkmark.svg" %}
+                                    {% endif %}
+                                {% else %}
+                                    {% if cell %}
+                                        {{cell}}
+                                    {% else %}
+                                        -
+                                    {% endif %}
+                                {% endif %}
+                            </td>
+                            {% endfor %}
+                        </tr>
+                        {% endif %}
+                        {% endfor %}
+                    </tbody>
+                </table>
+                {% endif %}
+                {% endif %}
+
+                <div class="form-control__with-helptext" data-controller="bijlagen">
+                    {{ form.csv_file|render_rotterdam_formulier }}
+                </div>
+                <div class="form-control__with-helptext">
                     {{ form.context|render_rotterdam_formulier }}
                 </div>
-                <div class="form-control__with-helptext padding--bottom">
+                <div class="form-control__with-helptext">
                     {{ form.group|render_rotterdam_formulier }}
                 </div>
             </fieldset>
@@ -82,8 +139,7 @@
                             class="btn btn-tertiary"
                             data-controller="utils"
                             data-action="utils#goToUrl"
-                            data-utils-url-param="{% url 'gebruiker_lijst' %}"
-                        >
+                            data-utils-url-param="{% url 'gebruiker_lijst' %}">
                         <span>Annuleren</span>
                     </button>
                     <button type="submit"class="btn btn-action">
@@ -95,7 +151,7 @@
         {% else %}
             <div>
                 <h2>Gelukt!</h2>
-                <p>Onderstaande gebruikers zijn aangemaakt</p>
+                <p>Onderstaande gebruiker{% if aangemaakte_gebruikers|length > 1 %}s{% endif %} {% if aangemaakte_gebruikers|length > 1 %}zijn{% else %}is{% endif %} aangemaakt</p>
             </div>
             <ul>
                 {% for gebruiker in aangemaakte_gebruikers %}
