--- a/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
+++ b/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
@@ -194,35 +194,34 @@
     </div>
 {% elif field|is_file %}
     <div class="form-row {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
-        {% if field.auto_id %}
-            <label class="label--file {% if field.field.required %}{{ form.required_css_class }}{% endif %}"
-                   for="{{ field.auto_id }}">
-                {{ field.field.label }}
-                {% if not field.field.required %}<small>(Niet verplicht)</small>{% endif %}
-            </label>
+        {% if field.auto_id and not field.field.widget.attrs.hideLabel %}
+            <label class="label--file {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.field.label }}{% if not field.field.required %} <small>(Niet verplicht)</small>{% endif %}</label>
         {% endif %}
         <div class="">
-            <button type="button"
-                    class="btn btn-secondary btn-files"
-                    id="buttonFile_{{ field.auto_id }}"
-                    data-action="bijlagen#showFileInput">
-                <svg width="32"
-                     height="32"
-                     viewBox="0 0 32 32"
-                     fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M17 6H15V15H6V17H15V26H17V17H26V15H17V6Z" fill="#fff" />
-                </svg>
-                <span>Foto toevoegen</span>
+            <button type="button" class="btn btn-secondary btn-files" id="buttonFile_{{field.auto_id}}" data-action="bijlagen#showFileInput">
+
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 6H15V15H6V17H15V26H17V17H26V15H17V6Z" fill="#fff"/>
+                    </svg>
+                    <span>{% if field.field.widget.attrs.button_text %}{{ field.field.widget.attrs.button_text }}{% else %}Foto toevoegen{% endif %}</span>
+
             </button>
+            {% if field.help_text %}
+                <p class="help-block">
+                    {{ field.help_text|safe }}
+                </p>
+            {% endif %}
+            {% for error in field.errors %}
+                <span class="help-block invalid-text {{ form.error_css_class }}">{{ error }}</span>
+            {% endfor %}
             <div class="file-upload multiple hidden" tabindex="1">
-                <div class="file-upload-mask">Sleep één of meer bestanden hier naartoe, of klik hier om bestanden te uploaden</div>
-                {% comment %} {{ field }} {% endcomment %}
-                <input id="{{ field.auto_id }}"
-                       name="{{ field.html_name }}"
-                       type="file"
-                       {% if field.value != None %}value="{{ field.value|stringformat:'s' }}"{% endif %}
-                       {% render_attrs field class="file-upload-input" multiple="multiple" %}>
+                <div class="file-upload-mask">
+                    Sleep één of meer bestanden hier naartoe, of klik hier om bestanden te uploaden
+                </div>
+                <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="file"
+                    {% if field.value != None %} value="{{ field.value|stringformat:'s' }}"{% endif %}
+                    {% render_attrs field class="file-upload-input" %}
+                >
                 <div id="imagesPreview" class="preview"></div>
             </div>
         </div>
