--- a/app/apps/beheer/templates/beheer.html
+++ b/app/apps/beheer/templates/beheer.html
@@ -20,6 +20,9 @@
         <li>
             <a href="{% url 'taaktype_categorie_lijst' %}">Taaktype categorieën</a>
         </li>
+        <li>
+            <a href="{% url 'release_note_lijst' %}">Release notes</a>
+        </li>
     </ul>
     <h2>Andere Forzamor beheer productie omgevingen</h2>
     <ul class="list--blocks-horizontal">
