--- a/app/apps/main/templates/melding/part_tijdlijn.html
+++ b/app/apps/main/templates/melding/part_tijdlijn.html
@@ -1,4 +1,5 @@
 {% load laatste_slug_van_url from main_tags %}
+{% load mor_core_url from main_tags %}
 {% load vind_in_dict from querystring_tags %}
 {% load to_datetime from date_tags %}
 {% load taakopdracht from melding_tags %}
@@ -6,6 +7,7 @@
 {% load get_gebruiker_object_middels_email from gebruikers_tags %}
 {% load vertaal from vertaal_tags %}
 {% load rotterdam_formulier_html %}
+
 <ul class="list__mutations">
     {% for row_data in tijdlijn_data %}
         {% with previous_row_data=tijdlijn_data|previous:forloop.counter0 %}
@@ -177,7 +179,7 @@
                                                         <li>
                                                             <div class="container__image">
                                                                 <div class="image"
-                                                                     style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url }}')">
+                                                                     style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url|mor_core_url }}')">
                                                                 </div>
                                                             </div>
                                                         </li>
@@ -193,7 +195,7 @@
                                                         <li>
                                                             <div class="container__image">
                                                                 <div class="image"
-                                                                     style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url }}')">
+                                                                     style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url|mor_core_url }}')">
                                                                 </div>
                                                             </div>
                                                         </li>
@@ -210,7 +212,7 @@
                                                         <li>
                                                             <div class="container__image">
                                                                 <div class="image"
-                                                                     style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url }}')">
+                                                                     style="background-image:url('{{ bijlage.afbeelding_verkleind_relative_url|mor_core_url }}')">
                                                                 </div>
                                                             </div>
                                                         </li>
