--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -12,6 +12,10 @@
         margin-top: -6px;
     }
 
+    p {
+        margin: 0;
+    }
+
     ul:not(.list-clean) {
         padding-left: 1em;
 
