--- a/app/frontend/assets/styles/components/_badges.scss
+++ b/app/frontend/assets/styles/components/_badges.scss
@@ -28,3 +28,17 @@
         color: $black;
     }
 }
+
+.badge--unread-count {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    font-size: 12px;
+    text-align: center;
+    line-height: 20px;
+    font-weight: 700;
+    border-radius: 50%;
+    color: $white;
+    background-color: $red-tint02;
+    transform: translateY(-50%);
+}
