--- a/app/apps/main/templates/snippets/pageheader.html
+++ b/app/apps/main/templates/snippets/pageheader.html
@@ -55,7 +55,7 @@
                 {% endif %}
                 {% if request.user.is_superuser %}
                     <li>
-                        <a href="{% url 'admin:index' %}">
+                        <a href="{% url 'admin:index' %}" target="_blank">
                             <svg width="20"
                                  height="20"
                                  viewBox="0 -960 960 960"
