Added link to overview

--- a/app/apps/release_notes/templates/public/release_note_detail.html
+++ b/app/apps/release_notes/templates/public/release_note_detail.html
@@ -18,7 +18,7 @@
         <h1 class="pagetitle">{{ release_note.titel|capfirst }}</h1>
         {% if release_note.publicatie_datum %}<p class="release-date">{{ release_note.publicatie_datum }}</p>{% endif %}
         <p class="description">{{ release_note.beschrijving|safe }}</p>
-        <div class="container">
+        <div class="container padding--bottom">
             <ul class="list--images">
                 {% for bijlage in release_note.bijlagen.all %}
                     {% if bijlage.mimetype == "image/gif" and bijlage.bestand %}
@@ -33,9 +33,7 @@
                 {% endfor %}
             </ul>
         </div>
-        {% comment %} <div class="container">
-            <a href="{% url 'taken' %}" class="btn btn-action">Bekijk mijn taken</a>
-        </div> {% endcomment %}
+        <a href="{% url origine %}">Bekijk alle berichten</a>
     </div>
     </turbo-frame>
 {% endblock body %}
