Removed novalidate and target _top

--- a/app/frontend/assets/styles/components/_page-beheer.scss
+++ b/app/frontend/assets/styles/components/_page-beheer.scss
@@ -87,6 +87,7 @@
     }
 
     .form-row {
+        margin-bottom: 2rem;
         select + p,
         .list--form-check-input + p {
             margin-top: -16px;
