--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -102,23 +102,21 @@ fieldset {
     }
 }
 
-.form-control,
-.form-select {
-    &:read-only {
-        background-color: $gray-tint01;
-        opacity: 1;
+.form-control[readonly],
+.form-select[readonly] {
+    background-color: $gray-tint01;
+    opacity: 1;
+    color: $gray-tint08;
+    ~ .form-check-label {
         color: $gray-tint08;
-        ~ .form-check-label {
-            color: $gray-tint08;
-        }
-        &:checked {
-            border-color: $gray-tint08;
-        }
+    }
+    &:checked {
+        border-color: $gray-tint08;
+    }
 
-        &:hover {
-            border: 1px solid #7c8b90 !important;
-            box-shadow: none !important;
-        }
+    &:hover {
+        border: 1px solid #7c8b90 !important;
+        box-shadow: none !important;
     }
 }
 
