--- a/app/apps/main/templates/melding/part_melding_afhandelen.html
+++ b/app/apps/main/templates/melding/part_melding_afhandelen.html
@@ -56,9 +56,9 @@
                           method="post"
                           class="form--horizontal"
                           data-controller="meldingbehandelformulier"
+                          data-meldingbehandelformulier-target="meldingBehandelFormulier"
                           data-turbo-frame="_top"
                           enctype="multipart/form-data"
-                          id="afhandelForm"
                           novalidate>
                         {% csrf_token %}
                         <div class="form-control__with-helptext js-validation">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
