--- a/app/apps/release_notes/templates/public/release_note_detail.html
+++ b/app/apps/release_notes/templates/public/release_note_detail.html
@@ -5,7 +5,7 @@
     <turbo-frame id="release_notes" data-turbo-action="advance">
     <div class="page__beheer" data-controller="row-search">
         <div>
-            <a href="{% url origine %}" class="link--back">
+            <a href="{% url origine %}" class="link--back" data-turbo-frame="_top">
                 <svg width="25"
                      height="16"
                      viewBox="0 0 25 16"
