--- a/app/apps/release_notes/templates/beheer/release_note_list.html
+++ b/app/apps/release_notes/templates/beheer/release_note_list.html
@@ -1,5 +1,6 @@
 {% extends "base_beheer.html" %}
 {% load rotterdam_formulier_html %}
+{% block title %}Release notes | PlanR{% endblock %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <div class="page__beheer" data-controller="row-search">
