--- a/app/apps/release_notes/templates/public/release_note_detail.html
+++ b/app/apps/release_notes/templates/public/release_note_detail.html
@@ -1,6 +1,6 @@
 {% extends "base_beheer.html" %}
 {% load rotterdam_formulier_html %}
-{% block title %}Nieuw in PlanR{% endblock %}
+{% block title %}{{ release_note.titel|capfirst }} | Nieuw in PlanR | PlanR{% endblock %}
 {% block body %}
     <turbo-frame id="release_notes" data-turbo-action="advance">
     <div class="page__beheer" data-controller="row-search">
