Titles for templates based on 'base'

--- a/app/apps/authorisatie/templates/auth/group_form.html
+++ b/app/apps/authorisatie/templates/auth/group_form.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
+{% block title %}
+    {% if object %}
+    Rechtengroep '{{ object.name }}' aanpassen
+    {% else %}
+    Rechtengroep aanmaken
+    {% endif %} | Beheer | PlanR{% endblock %}
 {% block body %}
     <turbo-frame id="beheer">
     <div class="page__beheer" data-turbo-action="advance">
