--- a/app/apps/authorisatie/templates/auth/group_list.html
+++ b/app/apps/authorisatie/templates/auth/group_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Rechtengroepen | Beheer | PlanR{% endblock %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <div class="page__beheer" data-controller="row-search">
