--- a/app/apps/main/templates/403.html
+++ b/app/apps/main/templates/403.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-
-
+{% block title %}Fout 403 - verboden | PlanR{% endblock %}
 {% block body %}
 
 <turbo-frame id="overview">
