--- a/app/apps/main/templates/500.html
+++ b/app/apps/main/templates/500.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Fout 500 - Er ging iets mis | PlanR{% endblock %}
 {% block title %}
     500 Er ging iets mis
 {% endblock title %}
