--- a/app/apps/main/templates/base_beheer.html
+++ b/app/apps/main/templates/base_beheer.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    PlanR beheer
+    Beheer | PlanR
 {% endblock title %}
 {% block pageheader %}
     {% with hide_menu=True screen_wide=True page_title="PlaRR" %}{{ block.super }}{% endwith %}
