--- a/app/apps/main/templates/melding/aanmaken.html
+++ b/app/apps/main/templates/melding/aanmaken.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
 {% load json_encode from json_tags %}
+{% block title %}Nieuw melding | PlanR{% endblock %}
 {% block body %}
     <h1>Nieuwe melding</h1>
     <turbo-frame id="melding_aanmaken">
