--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -6,6 +6,7 @@
 {% load get_bijlagen from melding_tags %}
 {% load mor_core_url from main_tags %}
 {% load rotterdam_formulier_html %}
+{% block title %}Meldingen overzicht | PlanR{% endblock %}
 {% block body %}
     <turbo-frame id="overview">
     <div data-controller="overview">
