--- a/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanmaken.html
+++ b/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanmaken.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
 {% load json_encode from json_tags %}
+{% block title %}Taaktype Categorie Aanmaken | Beheer | PlanR{% endblock %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <div class="page__beheer">
