--- a/app/apps/main/templates/melding/verzonden.html
+++ b/app/apps/main/templates/melding/verzonden.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
+{% block title %}Bedankt | PlanR{% endblock %}
 {% block body %}
     <h1>Bedankt</h1>
     <p>Het serviceverzoek is ingediend</p>
