--- a/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
@@ -2,7 +2,7 @@
 {% load rotterdam_formulier_html %}
 {% load json_encode from main_tags %}
 {% load static %}
-{% block title %} Wijzigen | Release notes | PlanR{% endblock %}
+{% block title %}Release note wijzigen | PlanR{% endblock %}
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
 <script type="text/javascript"
         src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
