Showing APP_ENV in frontend

--- a/app/frontend/assets/styles/components/_badges.scss
+++ b/app/frontend/assets/styles/components/_badges.scss
@@ -42,3 +42,18 @@
     background-color: $red-tint02;
     transform: translateY(-50%);
 }
+
+.container--env {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    pointer-events: none;
+    z-index: 200;
+
+    .badge {
+        height: 48px;
+        line-height: 48px;
+        font-size: 20px;
+    }
+}
